<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/playing"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/play"
        android:text="@string/playing" />

    <TextView
        android:id="@+id/random"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/random"
        android:text="@string/random" />

    <TextView
        android:id="@+id/search"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/search"
        android:text="@string/search" />

    <TextView
        android:id="@+id/library"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/playing"
        android:text="@string/playlists" />

</LinearLayout>