<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/server_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/server_url" />

    <EditText
        android:id="@+id/txt_server"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/server_text"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:singleLine="true"
        android:text="@string/server_url_http" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_server"
        android:layout_centerHorizontal="true"
        android:text="@string/user" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_text"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_username"
        android:layout_centerHorizontal="true"
        android:text="@string/password" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password"
        android:layout_centerHorizontal="true"
        android:text="@string/login_action" />

</RelativeLayout>