<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </FrameLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_audio_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <SeekBar
            android:id="@+id/seeker"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="10dip"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:progressDrawable="@android:drawable/progress_horizontal"
            android:thumb="@null" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/previous"
                style="@android:style/MediaButton.Previous"
                android:contentDescription="@string/previous" />

            <ImageButton
                android:id="@+id/play"
                style="@android:style/MediaButton.Play"
                android:contentDescription="@string/play" />

            <ImageButton
                android:id="@+id/pause"
                style="@android:style/MediaButton.Pause"
                android:contentDescription="@string/pause"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/next"
                style="@android:style/MediaButton.Next"
                android:contentDescription="@string/next" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>